#--------1---------2---------3---------4---------5---------6---------7---------8
#
#  File     : Makefile.am
#  Authors  : NT
#
#  (c) Copyright 2014 RIKEN. All rights reserved.
#
#--------1---------2---------3---------4---------5---------6---------7---------8

SUBDIRS = lib $(ATDYN_DIR) spdyn $(ANALYSIS_DIR)

MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = \
        GENESIS_VERSION

