#--------1---------2---------3---------4---------5---------6---------7---------8
#
#  File     : Makefile.am
#  Authors  : NT
#
#  (c) Copyright 2014 RIKEN. All rights reserved.
#
#--------1---------2---------3---------4---------5---------6---------7---------8

SUBDIRS = libana converter interface mode_analysis trj_analysis utilities sp_analysis free_energy clustering
EXTRA_DIST = cg_tools
