#--------1---------2---------3---------4---------5---------6---------7---------8
#
#  File     : Makefile.am
#  Authors  : NT
#
#  (c) Copyright 2014 RIKEN. All rights reserved.
#
#--------1---------2---------3---------4---------5---------6---------7---------8

SUBDIRS = comcrd_analysis \
          trj_analysis \
          qval_analysis \
          qval_residcg_analysis \
          drms_analysis \
          rmsd_analysis \
          rg_analysis \
          tilt_analysis \
	  lipidthick_analysis \
          hb_analysis \
          distmat_analysis \
	  msd_analysis \
          diffusion_analysis \
          fret_analysis \
		  ring_analysis
